@@ -699,6 +699,34 @@ Python types::
         s = '5' [StringElement]
           * xsi:type = 'string'
 
+The utility function ``deannotate()`` can be used to get rid of 'py:pytype'
+and/or 'xsi:type' information::
+
+    >>> root = objectify.fromstring('''\
+    ... <root xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    ...   <d xsi:type="double">5</d>
+    ...   <l xsi:type="long"  >5</l>
+    ...   <s xsi:type="string">5</s>
+    ... </root>''')
+    >>> objectify.annotate(root)
+    >>> print objectify.dump(root)
+    root = None [ObjectifiedElement]
+        d = 5.0 [FloatElement]
+          * xsi:type = 'double'
+          * py:pytype = 'float'
+        l = 5L [LongElement]
+          * xsi:type = 'long'
+          * py:pytype = 'long'
+        s = '5' [StringElement]
+          * xsi:type = 'string'
+          * py:pytype = 'str'
+    >>> objectify.deannotate(root)
+    >>> print objectify.dump(root)
+    root = None [ObjectifiedElement]
+        d = 5 [IntElement]
+        l = 5 [IntElement]
+        s = 5 [IntElement]
+
 For convenience, the ``DataElement()`` factory creates an Element with a
 Python value in one step.  You can pass the required Python type name or the
 XSI type name::
@@ -720,8 +748,8 @@ XSI type name::
     >>> root.x = objectify.DataElement(5, _xsi="integer")
     >>> print objectify.dump(root)
     root = None [ObjectifiedElement]
-        x = 5 [IntElement]
-          * py:pytype = 'int'
+        x = 5L [LongElement]
+          * py:pytype = 'long'
           * xsi:type = 'integer'
 
 There is a side effect of the type lookup.  If you assign a string value using
